--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-flask==3.0.3
-jinja2==3.1.4
-werkzeug==3.0.3
-psutil==6.0.0
-pi-ina219==1.4.1
-adafruit-blinka>=8.30.0
-adafruit-circuitpython-neopixel==6.3.12
-adafruit-circuitpython-vl53l1x>=1.2.0
+flask>=3.0
+waitress>=3.0
+PyYAML>=6.0
+Pillow>=10.0
