Stabilize MJPEG stream (Zero 2W/Bookworm): app factory + waitress --call, strip hop-by-hop headers, fixed templates, robust config handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
-# Python
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-
-# Virtualenvs
 venv/
 .env/
 .venv/
-
-# Build / dist
 build/
 dist/
 *.egg-info/
+config.yaml
