--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-Flask==3.1.2
-numpy==1.24.2
-picamera2==0.3.30
-pillow==11.3.0
-types-Flask-Cors==3.0
-types-Flask-SQLAlchemy==2.5
-types-Pillow==9.3
-types-waitress==2.1
-waitress==3.0.2
+cat > ~/RPi-Reversing-Cam/requirements.txt <<'REQ'
+Flask>=2.2
+waitress>=2.1
+Pillow>=9.4
+numpy>=1.24
+REQ
